Bug #1094: Fix for CVE-1999-0710: cachemgr malicouse use
This patch adds access controls to the cachemgr.cgi script, preventing
it from being abused to reach other servers than allowed in a local
configuration file.

--- a/branches/SQUID_2_5/include/autoconf.h.in
+++ b/branches/SQUID_2_5/include/autoconf.h.in
@@ -626,6 +626,9 @@
 /* Define if you have the <fcntl.h> header file.  */
 #undef HAVE_FCNTL_H
 
+/* Define if you have the <fnmatch.h> header file.  */
+#undef HAVE_FNMATCH_H
+
 /* Define if you have the <getopt.h> header file.  */
 #undef HAVE_GETOPT_H
 
